--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -52,6 +52,7 @@ export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="../../../../Desktop/index.html"
+patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
 seed=0
